# RPO2024_likova

fclient/app/: build.gradle.kts
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_pinpad.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
